# mybot_controller

./: CMakeLists.txt  package.xml
config/: default.yaml  husky.yaml  pr2.yaml
include/mybot_controller/: MyBotController.hpp
launch/: husky_mybot_controller.launch  mybot_controller.launch  pr2_mybot_controller.launch
src/: MyBotController.cpp  mybot_controller_node.cpp  returnToStart.sh
worlds/: hallway1.world
