<?xml version="1.0"?>
<package format="2">
  <name>mybot_controller</name>
  <version>0.0.0</version>
  <description>The mybot_controller package</description>

  <maintainer email="piccirim@oregonstate.edu">Mark Piccirilli</maintainer>
  <maintainer email="pondr@oregonstate.edu">Ryan Pond</maintainer>
  <maintainer email="gwinnk@oregonstate.edu">Kevin Gwinn</maintainer>

  <license>BSD</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/mybot_controller</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
